Sat Dec 18 18:15:18 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* The fonts are now installed, and loaded from the installation
	directory.

Sat Dec 18 15:45:39 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Okay then, there is now a checkerboard background when
	zooming out. There is a more memory efficent way of doing this,
	but I'll do that later...

Sat Dec 18 14:31:58 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Wheeeee! Thanks to Raster's example code, we now have zooming
	Raster, you are my hero :)
	So, middle-mouse button and drag -> zoom.
	There are some things to tidy up (eg adding a background when
	zooming out), but these are trivial compared to getting the
	zooming working with multiple windows, which I just did ::)

Fri Dec 17 22:00:57 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added titles to index prints. A title will only be printed if
	you specify --title-font.

Fri Dec 17 21:33:55 1999  Michael Jennings  <mej@eterm.org>

	* Added "make test" to run the test scripts one by one.

Fri Dec 17 21:32:16 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added more info the the index output :) Try test14 now :)

Fri Dec 17 21:01:21 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added a couple of fonts, found one small for doing index prints,
	tidied the directory structure a bit.

Fri Dec 17 18:37:14 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added some new options, here's an excerpt from --help
	-S, --slideshow  Enable slideshow mode. With this setting, instead
                         of opening multiple windows for multiple image
                         files, one window will be opened. Press mouse
                         button one to flick through the images.
	-i, --index      Enable Index mode. Index mode is similar to
                         montage mode, and accepts the same options. It